<resources>
    <string name="app_name">Foodukate</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login"></string>
    <string name="main_activity"></string>
    <string name="title_activity_build_profile">Build your Profile</string>
    <string name="title_activity_update_profile">Update Profile</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_detail"></string>
    <string name="title_activity_scanned_list"></string>
    <string name="title_activity_base"></string>
    <string name="update_profile">Update Profile</string>

    <string name="userName">Name</string>
    <string name="email">Email</string>
    <string name="login">login</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="camera">Camera</string>
    <string name="title_activity_add_recipe">Add Recipe</string>
    <string name="name">Name</string>
    <string name="uploadImage">Upload Image</string>
    <string name="cuisine">Cuisine</string>
    <string name="course">Course</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="quantity">Qty</string>
    <string name="servings">Servings</string>
    <string name="categories">Categories</string>
    <string name="cookingTime">Cooking Time (in mins)</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search_by_location_hint">Search By Location</string>

    <string name="loading">Loading…</string>

    <string name="sign_out">Sign Out</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_logo_icon">Foodukate Logo</string>

    <string name="title_text">FooduKate</string>
    <!-- Server Client ID.  Valid Web OAuth 2.0 Client ID obtained from https://console.developers.google.com/ -->
    <string name="server_client_id">90069306861-a946af38mrln4tqna2t7l2rek5ep7m85.apps.googleusercontent.com</string>
    <string name="interests">Interests :</string>
    <string name="phone_no">Phone</string>
    <string name="save">Save</string>
    <string name="build_your_profile">Build Your Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="comment">* select atleast one cuisine of interest</string>

    <string name="main_course">Main course</string>
    <string name="starters">Starters</string>
    <string name="desserts">Desserts</string>
    <string name="soup">Soup</string>

    <string name="add">Add</string>
</resources>
