<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.foodukate.recipe.AddRecipeActivity"
    tools:showIn="@layout/activity_add_recipe">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/new_recipe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:capitalize="words"
                        android:hint="@string/name"
                        android:maxLines="1"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cuisine" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <com.app.foodukate.common.MultiSpinner
                            android:id="@+id/new_recipe_cuisine_multi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:theme="@style/AppTheme" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/categories" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/category_vegan"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Vegan" />

                            <CheckBox
                                android:id="@+id/category_vegeterian"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Vegeterian" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/category_gluten_free"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Gluten Free" />

                            <CheckBox
                                android:id="@+id/category_non_veg"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Non Veg" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/course" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/course_dessert"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Dessert" />

                            <CheckBox
                                android:id="@+id/course_entree"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Entree" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/course_beverage"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Beverage" />

                            <CheckBox
                                android:id="@+id/course_breakfast"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Breakfast" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/course_sides"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Sides" />

                            <CheckBox
                                android:id="@+id/course_appetizer"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Appetizer" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/course_soup"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="Soup" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_serving"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="10dp">

                        <EditText
                            android:id="@+id/new_recipe_serving"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/servings"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_cooking_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="10dp">

                        <EditText
                            android:id="@+id/new_recipe_cooking_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cookingTime"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/new_recipe_ingredients_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/colorAccent"
                    android:padding="6dp"
                    android:text="@string/addIngredients"
                    android:textColor="@color/white"></android.support.v7.widget.AppCompatButton>


                <!--<ImageView-->
                <!--android:id="@+id/new_recipe_image"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="100dp"-->
                <!--android:scaleType="centerCrop" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_recipe_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/new_recipe_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:capitalize="sentences"
                        android:hint="@string/steps"
                        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                        android:isScrollContainer="true"
                        android:lines="2"
                        android:nestedScrollingEnabled="true"
                        android:scrollbars="vertical" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/new_recipe_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:src="@drawable/save"
                    android:background="@color/transparent"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>